--- a/sentilysis/package.json
+++ b/sentilysis/package.json
@@ -13,7 +13,8 @@
     "next": "^15.3.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
