--- a/backend/env.example
+++ b/backend/env.example
@@ -8,7 +8,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Application Configuration
 APP_NAME=Sentilytics
 APP_VERSION=1.0.0
-DEBUG=True
+DEBUG=true
 ENVIRONMENT=development
 
 # CORS Configuration
@@ -18,3 +18,7 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://your-fronten
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30 
+
+REDDIT_CLIENT_ID="sYeK4kq_sGzigl_9Faf0jQ"
+REDDIT_CLIENT_SECRET="bYMahx8w1snyFvF5VwZI0UTX7Jym-A"
+REDDIT_USER_AGENT="spurhacks2025 by u/United-Farmer8692"
