--- a/sentilysis/package.json
+++ b/sentilysis/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
+    "@types/three": "^0.177.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
     "next": "^15.3.4",
@@ -19,6 +23,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.177.0",
+    "three-globe": "^2.42.11",
     "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
